<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">DOC-App-Android</string>
    <string name="logo">LOGO</string>
    <string name="tv_desc">Sign In to your Account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="or_sign_in_with">-or Sign In with-</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="sign_up1">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="doctor">DOCTOR</string>
    <string name="patient">PATIENT</string>
    <string name="create_account_as">Create Account as</string>
    <string name="create_your_account">Create your Account</string>
    <string name="email">Email</string>
    <string name="next">next</string>
    <string name="contact">Contact</string>
    <string name="state">State</string>
    <string name="address">Address</string>
    <string name="or_sign_up_with">-or Sign Up with-</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="specialist_of">Specialist Of</string>
    <string name="create_password">Create Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="consult_to">Consult To</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="patient_info">PATIENT INFO</string>
    <string name="alex_silver">Alex Silver</string>
    <string name="case_of">CASE OF:</string>
    <string name="age">AGE:</string>
    <string name="gender">GENDER:</string>
    <string name="orthologist">ORTHOLOGIST</string>
    <string name="_34">34</string>
    <string name="female">FEMALE</string>
    <string name="search_here">Search Here</string>
    <string name="appointment_with">APPOINTMENT WITH</string>
    <string name="cancel">cancel</string>
    <string name="x_ray">X-RAY</string>
    <string name="ok">Ok</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="chooser_title">Message</string>
    <string name="specialistOf">SpecialistOf…</string>
    <string name="consultTo">ConsultTo…</string>
    <string name="x_ray_id">X-RAY ID</string>


    <array name="patientFilters">
        <item>CHECKUP HISTORY</item>
        <item>X-RAY/SCAN</item>
        <item>
            <P>PRESCRIPTION</P>
        </item>
        <item>APPOINTMENT</item>
    </array>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>


    <string-array name="problems">
        <item>Problem</item>
        <item>Elbow</item>
        <item>Hip</item>
        <item>Ankle</item>
        <item>Wrist</item>
        <item>Other</item>
    </string-array>

    <array name="patientInfoFilters">
        <item>CHECKUP HISTORY</item>
        <item>X-RAY/SCAN</item>
        <item>APPOINTMENT</item>
    </array>
</resources>