<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/simple_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik"
            android:text="@string/patient_info"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/back_button_img"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/app_back_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_header"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/patient_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/simple_toolbar" />

    <TextView
        android:id="@+id/textView_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_medium"
        android:padding="8dp"
        android:text="@string/alex_silver"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/tv_caseof"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/rubik"
        android:padding="3dp"
        android:text="@string/case_of"
        android:textColor="@color/app_black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/textView_img"
        app:layout_constraintTop_toBottomOf="@+id/textView_img"
        app:layout_constraintEnd_toStartOf="@id/tv_caseof_value"/>

    <TextView
        android:id="@+id/tv_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik"
        android:padding="3dp"
        android:text="@string/age"
        android:textColor="@color/app_black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tv_caseof"
        app:layout_constraintTop_toBottomOf="@+id/tv_caseof" />

    <TextView
        android:id="@+id/tv_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik"
        android:padding="3dp"
        android:text="@string/gender"
        android:textColor="@color/app_black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tv_age"
        app:layout_constraintTop_toBottomOf="@+id/tv_age" />

    <TextView
        android:id="@+id/tv_caseof_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik"
        android:padding="3dp"
        android:text="@string/orthologist"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_caseof"
        app:layout_constraintEnd_toEndOf="@+id/textView_img"
        app:layout_constraintStart_toEndOf="@+id/tv_caseof" />

    <TextView
        android:id="@+id/tv_age_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik"
        android:padding="3dp"
        android:text="@string/_34"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_age"
        app:layout_constraintStart_toEndOf="@+id/tv_caseof" />

    <TextView
        android:id="@+id/tv_gender_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik"
        android:padding="3dp"
        android:text="@string/female"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_gender"
        app:layout_constraintStart_toStartOf="@+id/tv_age_value" />

    <ImageButton
        android:id="@+id/btn_check_up"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="28dp"
        android:background="@drawable/checkup_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <ImageButton
        android:id="@+id/btn_edit"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:background="@drawable/edit_btn"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/btn_check_up"
        app:layout_constraintStart_toStartOf="@+id/btn_check_up"
        app:layout_constraintTop_toBottomOf="@+id/btn_check_up" />

    <ImageButton
        android:id="@+id/btn_message"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:background="@drawable/message_btn"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/btn_edit"
        app:layout_constraintStart_toStartOf="@+id/btn_edit"
        app:layout_constraintTop_toBottomOf="@+id/btn_edit" />

    <ImageButton
        android:id="@+id/btn_add"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:background="@drawable/add_btn"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/btn_message"
        app:layout_constraintStart_toStartOf="@+id/btn_message"
        app:layout_constraintTop_toBottomOf="@+id/btn_message" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/horizontal_rview"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:scrollbars="horizontal"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_gender"/>

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/scnd_light_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_rview" />

</androidx.constraintlayout.widget.ConstraintLayout>